Fix layout of controls.

--- a/climate_model_experimentation.ipynb
+++ b/climate_model_experimentation.ipynb
@@ -13,11 +13,9 @@
     "* (possibly) https://stackoverflow.com/questions/31911884/interactive-plots-placement-in-ipython-notebook-widget\n",
     "\n",
     "TODO: \n",
-    "* Better control layout - nice to get some sort of grid.\n",
     "* Fit model against obs using minimization.\n",
     "* Get updated AR6 forcing data.\n",
     "* Get SSP scenario data for future.\n",
-    "* Dropdown for SSP scenario.\n",
     "* Simple instructions on how to get working.\n",
     "* Why is uncertainty lacking one year (runs 1850-2015).\n",
     "* Rationalize all input data CSV files.\n",
@@ -27,10 +25,13 @@
     "* **Check/compare model output with Excel.** Was using lambda=0.08 instead of 0.8.\n",
     "* **Get obs data as CSV and compare against obs.** Done, plus uncertainty.\n",
     "* **Check it works using AppsAnywhere on windows.** Works for me with no extra setup.\n",
+    "* **Dropdown for SSP scenario.** UI element there but doesn't work yet.\n",
+    "* **Better control layout - nice to get some sort of grid.** Layout good enough for time being.\n",
     "\n",
     "Updates:\n",
     "* 29/7/22: Initial playing. Import forcing data (exported from Excel as CSV). Implement simple model which is a copy of the Excel CLIMATE MODEL tab. Get interactive controls working with checkboxes and sliders.\n",
-    "* 29/7/22: Try on AppsAnywhere. Fix problem with lambda value. Get obs data."
+    "* 29/7/22: Try on AppsAnywhere. Fix problem with lambda value. Get obs data.\n",
+    "* 29/7/22: Nicer layout of controls."
    ]
   },
   {
@@ -42,12 +43,26 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8fb5ca7d44b54b6da9eac40e9d1dbe75",
+       "model_id": "6aecaa042c564689b51a611b12ce04c3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(Dropdown(description='Future scenaro:', options=(None, 'SSP1-1.9', 'SSP1-2.6', 'SSP2-4.5…"
+       "VBox(children=(Dropdown(description='Future scenaro:', options=(None, 'SSP1-1.9', 'SSP1-2.6', 'SSP2-4.5', 'SSP…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e9373d51857d408ba8f3e6e6e210b4dd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
       ]
      },
      "metadata": {},
@@ -59,14 +74,6 @@
     "cm = ClimateModel()\n",
     "cm.display_controls()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1a058be-af6a-4430-8cad-e9062aeda83e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
