Play around trying to link up UI state to actions.
E.g. having anthro on/off buttons.

--- a/climate_model_experimentation.ipynb
+++ b/climate_model_experimentation.ipynb
@@ -13,6 +13,8 @@
     "* (possibly) https://stackoverflow.com/questions/31911884/interactive-plots-placement-in-ipython-notebook-widget\n",
     "\n",
     "TODO: \n",
+    "* Buttons to turn e.g. all anthro on/off, reset vars to defaults.\n",
+    "* Display forcing as well.\n",
     "* Fit model against obs using minimization.\n",
     "* Get updated AR6 forcing data.\n",
     "* Get SSP scenario data for future.\n",
@@ -36,19 +38,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "b57ee79b-d4ea-4aab-9569-27bd5127b9b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6aecaa042c564689b51a611b12ce04c3",
+       "model_id": "05d08e8af5414a459ace1b8c727b146c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Dropdown(description='Future scenaro:', options=(None, 'SSP1-1.9', 'SSP1-2.6', 'SSP2-4.5', 'SSP…"
+       "VBox(children=(Dropdown(description='Future scenaro:', layout=Layout(grid_area='widget001'), options=(None, 'S…"
       ]
      },
      "metadata": {},
@@ -57,7 +59,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9373d51857d408ba8f3e6e6e210b4dd",
+       "model_id": "d07ea2a4b54f4b469361ba1603ab269f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -70,15 +72,25 @@
     }
    ],
    "source": [
-    "from climate_model import ClimateModel\n",
-    "cm = ClimateModel()\n",
-    "cm.display_controls()"
+    "import climate_model\n",
+    "import importlib\n",
+    "importlib.reload(climate_model)\n",
+    "model = climate_model.ClimateModel()\n",
+    "model.display()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e653b21-860e-44e8-8624-7b2d37945b7f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -92,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
