--- a/initial_tests.ipynb
+++ b/initial_tests.ipynb
@@ -930,11 +930,243 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "90826c37-1c35-47ae-8938-0676fec75881",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ipywidgets as widgets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "70343a9d-fa1c-441b-9881-4a94d9036c27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e10414d373984da4907eefe2c3318c9d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Click Me!', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "8d3e0f9fdc8c42598693cf6bccc73c1c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import display\n",
+    "button = widgets.Button(description=\"Click Me!\")\n",
+    "output = widgets.Output()\n",
+    "\n",
+    "display(button, output)\n",
+    "\n",
+    "def on_button_clicked(b):\n",
+    "    b.description = 'Oh no!'\n",
+    "    with output:\n",
+    "        print(\"Button clicked.\")\n",
+    "\n",
+    "button.on_click(on_button_clicked)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "0b0652d2-b678-47f2-8bbb-de61ba02e100",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a9bf566586864ffa9ca64262f609bc47",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Box(children=(Label(value='Anthro.: '), Button(description='on', layout=Layout(width='40px'), style=ButtonStyl…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "class UIModel:\n",
+    "    def __init__(self):\n",
+    "        blayout = widgets.Layout(width='40px')\n",
+    "        self.on = widgets.Button(description='on', layout=blayout)\n",
+    "        self.off = widgets.Button(description='off', layout=blayout)\n",
+    "        self.cb1 = widgets.Checkbox(description='cb1')\n",
+    "        self.cb2 = widgets.Checkbox(description='cb2')\n",
+    "        # self.output = widgets.Output()\n",
+    "        \n",
+    "        for btn in [self.on, self.off]:\n",
+    "            btn.on_click(self.btn_clicked)\n",
+    "        display(widgets.Box(children=[widgets.Label('Anthro.: '), self.on, self.off, self.cb1, self.cb2]))\n",
+    "    \n",
+    "    def btn_clicked(self, btn):\n",
+    "        # with self.output:\n",
+    "        #     print(btn)\n",
+    "        if btn == self.on:\n",
+    "            self.cb1.value = True\n",
+    "            self.cb2.value = True\n",
+    "        elif btn == self.off:\n",
+    "            self.cb1.value = False\n",
+    "            self.cb2.value = False\n",
+    "\n",
+    "ui_model = UIModel()\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "fb8168b2-49df-4132-baf8-d250b4efccd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mSignature:\u001b[0m \u001b[0mui_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mon\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobserve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhandler\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtraitlets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAll\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'change'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m\n",
+       "Setup a handler to be called when a trait changes.\n",
+       "\n",
+       "This is used to setup dynamic notifications of trait changes.\n",
+       "\n",
+       "Parameters\n",
+       "----------\n",
+       "handler : callable\n",
+       "    A callable that is called when a trait changes. Its\n",
+       "    signature should be ``handler(change)``, where ``change`` is a\n",
+       "    dictionary. The change dictionary at least holds a 'type' key.\n",
+       "    * ``type``: the type of notification.\n",
+       "    Other keys may be passed depending on the value of 'type'. In the\n",
+       "    case where type is 'change', we also have the following keys:\n",
+       "    * ``owner`` : the HasTraits instance\n",
+       "    * ``old`` : the old value of the modified trait attribute\n",
+       "    * ``new`` : the new value of the modified trait attribute\n",
+       "    * ``name`` : the name of the modified trait attribute.\n",
+       "names : list, str, All\n",
+       "    If names is All, the handler will apply to all traits.  If a list\n",
+       "    of str, handler will apply to all names in the list.  If a\n",
+       "    str, the handler will apply just to that name.\n",
+       "type : str, All (default: 'change')\n",
+       "    The type of notification to filter by. If equal to All, then all\n",
+       "    notifications are passed to the observe handler.\n",
+       "\u001b[0;31mFile:\u001b[0m      ~/anaconda3/envs/mcs_prime_env/lib/python3.10/site-packages/traitlets/traitlets.py\n",
+       "\u001b[0;31mType:\u001b[0m      method\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "ui_model.on.observe?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ba390a8a-26d1-4a9d-bd70-1e5fbb81ec3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mSignature:\u001b[0m \u001b[0mcb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mobserve\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhandler\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtraitlets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mAll\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'change'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m\n",
+       "Setup a handler to be called when a trait changes.\n",
+       "\n",
+       "This is used to setup dynamic notifications of trait changes.\n",
+       "\n",
+       "Parameters\n",
+       "----------\n",
+       "handler : callable\n",
+       "    A callable that is called when a trait changes. Its\n",
+       "    signature should be ``handler(change)``, where ``change`` is a\n",
+       "    dictionary. The change dictionary at least holds a 'type' key.\n",
+       "    * ``type``: the type of notification.\n",
+       "    Other keys may be passed depending on the value of 'type'. In the\n",
+       "    case where type is 'change', we also have the following keys:\n",
+       "    * ``owner`` : the HasTraits instance\n",
+       "    * ``old`` : the old value of the modified trait attribute\n",
+       "    * ``new`` : the new value of the modified trait attribute\n",
+       "    * ``name`` : the name of the modified trait attribute.\n",
+       "names : list, str, All\n",
+       "    If names is All, the handler will apply to all traits.  If a list\n",
+       "    of str, handler will apply to all names in the list.  If a\n",
+       "    str, the handler will apply just to that name.\n",
+       "type : str, All (default: 'change')\n",
+       "    The type of notification to filter by. If equal to All, then all\n",
+       "    notifications are passed to the observe handler.\n",
+       "\u001b[0;31mFile:\u001b[0m      ~/anaconda3/envs/mcs_prime_env/lib/python3.10/site-packages/traitlets/traitlets.py\n",
+       "\u001b[0;31mType:\u001b[0m      method\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "cb.observe?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "180f4c82-0bdd-4c70-abd8-9aa49b83395d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\u001b[0;31mSignature:\u001b[0m \u001b[0mwidgets\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minteractive_output\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcontrols\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+       "\u001b[0;31mDocstring:\u001b[0m\n",
+       "Connect widget controls to a function.\n",
+       "\n",
+       "This function does not generate a user interface for the widgets (unlike `interact`).\n",
+       "This enables customisation of the widget user interface layout.\n",
+       "The user interface layout must be defined and displayed manually.\n",
+       "\u001b[0;31mFile:\u001b[0m      ~/anaconda3/envs/mcs_prime_env/lib/python3.10/site-packages/ipywidgets/widgets/interaction.py\n",
+       "\u001b[0;31mType:\u001b[0m      function\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "widgets.interactive_output?"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -948,7 +1180,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
