Split climate_model into model, UI. Get e.g. on/off anthro forcing buttons working with manual update.

--- a/climate_model_experimentation.ipynb
+++ b/climate_model_experimentation.ipynb
@@ -13,7 +13,6 @@
     "* (possibly) https://stackoverflow.com/questions/31911884/interactive-plots-placement-in-ipython-notebook-widget\n",
     "\n",
     "TODO: \n",
-    "* Buttons to turn e.g. all anthro on/off, reset vars to defaults.\n",
     "* Display forcing as well.\n",
     "* Fit model against obs using minimization.\n",
     "* Get updated AR6 forcing data.\n",
@@ -29,23 +28,26 @@
     "* **Check it works using AppsAnywhere on windows.** Works for me with no extra setup.\n",
     "* **Dropdown for SSP scenario.** UI element there but doesn't work yet.\n",
     "* **Better control layout - nice to get some sort of grid.** Layout good enough for time being.\n",
+    "* **Buttons to turn e.g. all anthro on/off, reset vars to defaults.** Done. Was a bit tricky getting it all working together.\n",
+    "\n",
     "\n",
     "Updates:\n",
     "* 29/7/22: Initial playing. Import forcing data (exported from Excel as CSV). Implement simple model which is a copy of the Excel CLIMATE MODEL tab. Get interactive controls working with checkboxes and sliders.\n",
     "* 29/7/22: Try on AppsAnywhere. Fix problem with lambda value. Get obs data.\n",
-    "* 29/7/22: Nicer layout of controls."
+    "* 29/7/22: Nicer layout of controls.\n",
+    "* 4/8/22: Fix buttons to e.g. set all anthro forcings on/off. Split into model/UI."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "id": "b57ee79b-d4ea-4aab-9569-27bd5127b9b5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05d08e8af5414a459ace1b8c727b146c",
+       "model_id": "126c9c29cb274672b62b8b720bff0494",
        "version_major": 2,
        "version_minor": 0
       },
@@ -59,7 +61,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d07ea2a4b54f4b469361ba1603ab269f",
+       "model_id": "aeb2f4c906b7435b9fc049db850f0874",
        "version_major": 2,
        "version_minor": 0
       },
@@ -76,13 +78,433 @@
     "import importlib\n",
     "importlib.reload(climate_model)\n",
     "model = climate_model.ClimateModel()\n",
-    "model.display()"
+    "ui = climate_model.ClimateModelUI(model)\n",
+    "ui.display()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "1e653b21-860e-44e8-8624-7b2d37945b7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.3833082710379146"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.rmse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "a3ca6b32-c16e-4b1b-8506-bbe9aa99e1af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>YEAR</th>\n",
+       "      <th>CO2</th>\n",
+       "      <th>Other well mixed GHGs</th>\n",
+       "      <th>Trop. O3</th>\n",
+       "      <th>Strat. O3</th>\n",
+       "      <th>Direct Sulphate Aerosol</th>\n",
+       "      <th>Aerosol-Cloud Interactions</th>\n",
+       "      <th>Biomass Burning Aerosol</th>\n",
+       "      <th>Black &amp; Organic Carbon Aerosol</th>\n",
+       "      <th>Solar</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Unnamed: 47</th>\n",
+       "      <th>Unnamed: 48</th>\n",
+       "      <th>Unnamed: 49</th>\n",
+       "      <th>Unnamed: 50</th>\n",
+       "      <th>Unnamed: 51</th>\n",
+       "      <th>Unnamed: 52</th>\n",
+       "      <th>Unnamed: 53</th>\n",
+       "      <th>Unnamed: 54</th>\n",
+       "      <th>Unnamed: 55</th>\n",
+       "      <th>Unnamed: 56</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>SCALING</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1750</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1751</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-0.01</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1752</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1753</td>\n",
+       "      <td>-0.02</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>347</th>\n",
+       "      <td>2096</td>\n",
+       "      <td>1.92</td>\n",
+       "      <td>1.03</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>-0.36</td>\n",
+       "      <td>-0.44</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.28</td>\n",
+       "      <td>1.87</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.09</td>\n",
+       "      <td>-0.30</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>348</th>\n",
+       "      <td>2097</td>\n",
+       "      <td>1.92</td>\n",
+       "      <td>1.03</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>-0.36</td>\n",
+       "      <td>-0.44</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.33</td>\n",
+       "      <td>1.87</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.09</td>\n",
+       "      <td>-0.30</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>349</th>\n",
+       "      <td>2098</td>\n",
+       "      <td>1.92</td>\n",
+       "      <td>1.03</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>-0.36</td>\n",
+       "      <td>-0.44</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.38</td>\n",
+       "      <td>1.88</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.09</td>\n",
+       "      <td>-0.30</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>350</th>\n",
+       "      <td>2099</td>\n",
+       "      <td>1.92</td>\n",
+       "      <td>1.03</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>-0.36</td>\n",
+       "      <td>-0.44</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.44</td>\n",
+       "      <td>1.89</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.09</td>\n",
+       "      <td>-0.30</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.13</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>351</th>\n",
+       "      <td>2100</td>\n",
+       "      <td>1.92</td>\n",
+       "      <td>1.03</td>\n",
+       "      <td>0.38</td>\n",
+       "      <td>-0.03</td>\n",
+       "      <td>-0.36</td>\n",
+       "      <td>-0.44</td>\n",
+       "      <td>0.05</td>\n",
+       "      <td>0.16</td>\n",
+       "      <td>0.08</td>\n",
+       "      <td>...</td>\n",
+       "      <td>6.49</td>\n",
+       "      <td>1.89</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.09</td>\n",
+       "      <td>-0.30</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.14</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>352 rows × 57 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        YEAR   CO2  Other well mixed GHGs  Trop. O3  Strat. O3  \\\n",
+       "0    SCALING  1.00                   1.00      1.00       1.00   \n",
+       "1       1750  0.00                   0.00      0.00       0.00   \n",
+       "2       1751 -0.02                   0.00      0.00       0.00   \n",
+       "3       1752 -0.02                   0.01      0.00       0.00   \n",
+       "4       1753 -0.02                   0.01      0.00       0.00   \n",
+       "..       ...   ...                    ...       ...        ...   \n",
+       "347     2096  1.92                   1.03      0.38      -0.03   \n",
+       "348     2097  1.92                   1.03      0.38      -0.03   \n",
+       "349     2098  1.92                   1.03      0.38      -0.03   \n",
+       "350     2099  1.92                   1.03      0.38      -0.03   \n",
+       "351     2100  1.92                   1.03      0.38      -0.03   \n",
+       "\n",
+       "     Direct Sulphate Aerosol  Aerosol-Cloud Interactions  \\\n",
+       "0                       1.00                        1.00   \n",
+       "1                       0.00                        0.00   \n",
+       "2                       0.00                        0.00   \n",
+       "3                       0.00                        0.00   \n",
+       "4                       0.00                        0.00   \n",
+       "..                       ...                         ...   \n",
+       "347                    -0.36                       -0.44   \n",
+       "348                    -0.36                       -0.44   \n",
+       "349                    -0.36                       -0.44   \n",
+       "350                    -0.36                       -0.44   \n",
+       "351                    -0.36                       -0.44   \n",
+       "\n",
+       "     Biomass Burning Aerosol  Black & Organic Carbon Aerosol  Solar  ...  \\\n",
+       "0                       1.00                            1.00   1.00  ...   \n",
+       "1                       0.00                            0.00   0.00  ...   \n",
+       "2                       0.00                            0.00  -0.01  ...   \n",
+       "3                       0.00                            0.00  -0.03  ...   \n",
+       "4                       0.00                            0.00  -0.03  ...   \n",
+       "..                       ...                             ...    ...  ...   \n",
+       "347                     0.05                            0.16   0.08  ...   \n",
+       "348                     0.05                            0.16   0.08  ...   \n",
+       "349                     0.05                            0.16   0.08  ...   \n",
+       "350                     0.05                            0.16   0.08  ...   \n",
+       "351                     0.05                            0.16   0.08  ...   \n",
+       "\n",
+       "     Unnamed: 47  Unnamed: 48  Unnamed: 49  Unnamed: 50  Unnamed: 51  \\\n",
+       "0            NaN          NaN          NaN          NaN          NaN   \n",
+       "1            NaN          NaN          NaN          NaN          NaN   \n",
+       "2            NaN          NaN          NaN          NaN          NaN   \n",
+       "3            NaN          NaN          NaN          NaN          NaN   \n",
+       "4            NaN          NaN          NaN          NaN          NaN   \n",
+       "..           ...          ...          ...          ...          ...   \n",
+       "347         6.28         1.87         0.44          0.0        -0.09   \n",
+       "348         6.33         1.87         0.44          0.0        -0.09   \n",
+       "349         6.38         1.88         0.44          0.0        -0.09   \n",
+       "350         6.44         1.89         0.44          0.0        -0.09   \n",
+       "351         6.49         1.89         0.44          0.0        -0.09   \n",
+       "\n",
+       "     Unnamed: 52  Unnamed: 53  Unnamed: 54  Unnamed: 55 Unnamed: 56  \n",
+       "0            NaN          NaN          NaN          NaN         NaN  \n",
+       "1            NaN          NaN          NaN          NaN         NaN  \n",
+       "2            NaN          NaN          NaN          NaN         NaN  \n",
+       "3            NaN          NaN          NaN          NaN         NaN  \n",
+       "4            NaN          NaN          NaN          NaN         NaN  \n",
+       "..           ...          ...          ...          ...         ...  \n",
+       "347       -0.30          0.01         0.07        -0.03         0.0  \n",
+       "348       -0.30          0.01         0.07         0.02         0.0  \n",
+       "349       -0.30          0.01         0.07         0.09         0.0  \n",
+       "350       -0.30          0.01         0.07         0.13         0.0  \n",
+       "351       -0.30          0.01         0.07         0.14         0.0  \n",
+       "\n",
+       "[352 rows x 57 columns]"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.forcings"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e653b21-860e-44e8-8624-7b2d37945b7f",
+   "id": "ed6f2864-3358-4227-b24b-e8e3fb4dd58b",
    "metadata": {},
    "outputs": [],
    "source": []
