Add note on where to find AR6 data.

--- a/climate_model_experimentation.ipynb
+++ b/climate_model_experimentation.ipynb
@@ -14,6 +14,8 @@
     "\n",
     "Useful info:\n",
     "* https://ipywidgets.readthedocs.io/en/latest/examples/Using%20Interact.html\n",
+    "* Forcing files/SSP data: IPCC AR6 WGI Annex III https://www.ipcc.ch/report/ar6/wg1/. Has link to data:\n",
+    "  * https://zenodo.org/record/5705391#.YvtbUmHMIW0\n",
     "\n",
     "Notes:\n",
     "* All input data currently comes from Excel model, after being exported and cleaned up.\n",
@@ -25,6 +27,7 @@
     "* Simple instructions on how to get working.\n",
     "* Why is uncertainty lacking one year (runs 1850-2015).\n",
     "* Make sure UI works on different screen sizes.\n",
+    "* Clean up unused files.\n",
     "\n",
     "DONE: \n",
     "* **Check/compare model output with Excel.** Was using lambda=0.08 instead of 0.8.\n",
