Make it so I can run old and new versions side-by-side.

--- a/climate_model_experimentation.ipynb
+++ b/climate_model_experimentation.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "37c2299b",
    "metadata": {
     "collapsed": false,
@@ -66,7 +66,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3d8ea0b31ffb4009b05747ffd43f3a55",
+       "model_id": "3e751cba2f07407b843e5a57a0320ef0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -80,7 +80,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9a2b57b8b0349d3ab15abef8bad691d",
+       "model_id": "b54f6b17c343468b9b503c848c31f36e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -95,11 +95,11 @@
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import climate_model\n",
+    "import climate_model_orig\n",
     "import importlib\n",
-    "importlib.reload(climate_model)\n",
-    "model = climate_model.ClimateModel()\n",
-    "ui = climate_model.ClimateModelUI(model)\n",
+    "importlib.reload(climate_model_orig)\n",
+    "model = climate_model_orig.ClimateModel()\n",
+    "ui = climate_model_orig.ClimateModelUI(model)\n",
     "ui.display()"
    ]
   },
