Update notebook/model as per discussion with Bill Collins:
* 2 rows for sliders
* Autoscale y-axis for plots
* Remove equil. plot for e.g. step cell
* Change range/step for sliders, make sure you can set K(=kappa)=0
* show_obs=False for step
* optimize_lambda: remember UI settings for K...

I have also reformatted the code using `black -S -l120 .`.

--- a/climate_model_runcontrol.ipynb
+++ b/climate_model_runcontrol.ipynb
@@ -29,8 +29,6 @@
    "outputs": [],
    "source": [
     "# Import required libraries.\n",
-    "import importlib\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
@@ -53,7 +51,7 @@
    "outputs": [],
    "source": [
     "# Create an interactive climate model.\n",
-    "importlib.reload(climate_model)\n",
+    "# Note, the settings here will be used in subsequent cells.\n",
     "model = climate_model.ClimateModel()\n",
     "ui = climate_model.ClimateModelUI(model)\n",
     "ui.display()"
@@ -62,24 +60,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39c54278-92fd-4363-91f6-233e07fdf15b",
+   "id": "24f4a685-de68-491b-94ff-562b857c74a7",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate the optimal lambda value.\n",
-    "rmse, opt_lam = model.optimize_lambda()\n",
-    "print(f'Optimal lambda is {opt_lam:.3f}, which gives an RMSE of {rmse:.6f}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4dbd60af-4e08-4339-9127-9db69f9e6e3c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Note, this uses the values taken from the sliders for lam, d_d etc. (lam used as starting value).\n",
+    "rmse, opt_lam = model.optimize_lambda(**ui.get_values())\n",
+    "print(f'Optimal lambda is {opt_lam:.3f}, which gives an RMSE of {rmse:.6f}')\n",
+    "\n",
+    "opt_control_values = ui.get_values()\n",
+    "opt_control_values['lam'] = opt_lam\n",
     "# Run model with optimal lambda, and default values of all other variables.\n",
-    "model.run_model(lam=opt_lam)\n",
+    "model.run_model(**opt_control_values)\n",
     "model.plot()"
    ]
   },
@@ -100,16 +93,16 @@
    "source": [
     "# Some simple experiments with defined total forcings.\n",
     "# Note, total_forcing's first year is 1750, so index 150 corresponds to 1900.\n",
-    "method = '3xCO2'\n",
+    "method = 'step'\n",
     "\n",
     "if method == 'step':\n",
     "    # Turn on forcing at 1900:\n",
     "    total_forcing = np.zeros_like(model.forcings.year.loc[1:])\n",
     "    total_forcing[150:] = 1\n",
     "elif method == 'pulse':\n",
-    "    # Forcing pulse 1900-1909:\n",
+    "    # Forcing pulse 1900-1901:\n",
     "    total_forcing = np.zeros_like(model.forcings.year.loc[1:])\n",
-    "    total_forcing[150:160] = 3\n",
+    "    total_forcing[150:152] = 3\n",
     "elif method == '3xCO2':\n",
     "    # 3x CO2 forcing:\n",
     "    columns = [c for c in model.forcings.columns if c != 'year']\n",
@@ -121,7 +114,7 @@
     "\n",
     "# Note, this uses the values taken from the sliders for lambda, d_d etc.\n",
     "model.run_model(total_forcing=total_forcing, **ui.get_values())\n",
-    "model.plot(show_equilibrium=False)"
+    "model.plot(show_obs=False, show_equilibrium=False)"
    ]
   },
   {
@@ -140,12 +133,13 @@
    "outputs": [],
    "source": [
     "# Show results for a very simple ensemble of lambda values, from 0.4 to 1, with 5 steps.\n",
+    "# Does not use values from sliders.\n",
     "fig, (ax1, ax2) = plt.subplots(2, 1)\n",
     "fig.set_size_inches((18, 8))\n",
     "for lam in np.linspace(0.4, 1, 5):\n",
     "    model.run_model(lam=lam)\n",
     "    model.plot(ax1=ax1, ax2=ax2, show_forcing=False)\n",
-    "model.base_plot(ax=ax1)"
+    "model.configure_axes([ax1, ax2])"
    ]
   },
   {
@@ -156,16 +150,22 @@
    "outputs": [],
    "source": [
     "# Show IPCC-like uncertainty range for the 5 SSP scenarios, with a given uncertainty multiplier.\n",
-    "# Use the optimal lambda calculated above.\n",
+    "# Use the optimal lambda calculated above, using settings *when that cell was run*.\n",
     "lam_uncert = 0.2\n",
     "lam_min = opt_lam - opt_lam * lam_uncert\n",
     "lam_max = opt_lam + opt_lam * lam_uncert\n",
     "\n",
     "plt.figure(figsize=(20, 10))\n",
     "for scenario in model.scenarios:\n",
-    "    model.run_model(future_scenario=scenario, lam=lam_min)\n",
+    "    new_control_values = opt_control_values.copy()\n",
+    "    new_control_values['future_scenario'] = scenario\n",
+    "    \n",
+    "    new_control_values['lam'] = lam_min\n",
+    "    model.run_model(**new_control_values)\n",
     "    dTm_min = model.dT.dTm.values.copy()\n",
-    "    model.run_model(future_scenario=scenario, lam=lam_max)\n",
+    "    \n",
+    "    new_control_values['lam'] = lam_max\n",
+    "    model.run_model(**new_control_values)\n",
     "    dTm_max = model.dT.dTm.values.copy()\n",
     "    \n",
     "    plt.fill_between(\n",
