Delete the show_equilibrium=False arg.

--- a/climate_model_runcontrol.ipynb
+++ b/climate_model_runcontrol.ipynb
@@ -114,7 +114,7 @@
     "\n",
     "# Note, this uses the values taken from the sliders for lambda, d_d etc.\n",
     "model.run_model(total_forcing=total_forcing, **ui.get_values())\n",
-    "model.plot(show_obs=False, show_equilibrium=False)"
+    "model.plot(show_obs=False)"
    ]
   },
   {
